# rustmate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: packet_decode.rs  pipeline_throughput.rs
src/: analyzers.rs  api.rs  capture.rs  cli.rs  config.rs  dispatcher.rs  event.rs  health.rs  lib.rs  main.rs  pattern.rs  pcapfile.rs  perf_harness.rs  pipeline.rs  protocol_detection.rs  service_profile.rs  shard.rs  sharded_pipeline.rs  storage.rs  stream_content.rs  stream_inventory.rs  stream_message.rs  stream_parser.rs  stream_slice.rs  stream_transform.rs  stream_view.rs
src/analyzers/: dns.rs  http.rs  tls_meta.rs
src/capture/: capture.rs  pcapfile.rs
src/flow/: mod.rs
src/frontend/: app.js  index.html  styles.css
src/ingest/: live.rs  mod.rs  pcap_file.rs
src/output/: jsonl.rs  mod.rs
src/packet/: mod.rs
src/storage/: json_writer.rs
