[package]
name = "rustmate"
version = "0.1.0"
edition = "2024"
authors = ["eogod"]
description = "Lightweight traffic capture and analysis utility for CTF challenges"
license = "MIT"


[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
pcap = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22"

# (Планируется)
# etherparse = "0.14"
# rusqlite = "0.31"

[dev-dependencies]
serde_json = "1.0"