[package]
name = "rustmate"
version = "0.1.0"
edition = "2024"
authors = ["eogod"]
description = "Lightweight traffic capture and analysis utility for CTF challenges"
license = "MIT"


[dependencies]
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
etherparse = "0.20"
pcap = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = "0.8"
serde_json = "1.0"

[[bench]]
name = "packet_decode"
harness = false
