[package]
name = "rustmate"
version = "0.1.0"
edition = "2024"
authors = ["eogod"]
description = "Lightweight traffic capture and analysis utility for CTF challenges"
license = "MIT"


[dependencies]
ahash = "0.8"
aho-corasick = "1"
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3.5"
etherparse = "0.20"
pcap = "2.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15"
tokio = { version = "1.52", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = "0.8"
serde_json = "1.0"

[[bench]]
name = "packet_decode"
harness = false

[[bench]]
name = "pipeline_throughput"
harness = false
